--- a/demo_bibliografia/demo_bibliografia.vbproj
+++ b/demo_bibliografia/demo_bibliografia.vbproj
@@ -97,6 +97,12 @@
     <Compile Include="autor.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="editorial.Designer.vb">
+      <DependentUpon>editorial.vb</DependentUpon>
+    </Compile>
+    <Compile Include="editorial.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="facultad.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -135,6 +141,9 @@
   <ItemGroup>
     <EmbeddedResource Include="autor.resx">
       <DependentUpon>autor.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="editorial.resx">
+      <DependentUpon>editorial.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="facultad.resx">
       <DependentUpon>facultad.vb</DependentUpon>
