--- a/demo_bibliografia/demo_bibliografia.vbproj
+++ b/demo_bibliografia/demo_bibliografia.vbproj
@@ -97,6 +97,12 @@
     <Compile Include="autor.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="bibliografia.Designer.vb">
+      <DependentUpon>bibliografia.vb</DependentUpon>
+    </Compile>
+    <Compile Include="bibliografia.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="edicion.Designer.vb">
       <DependentUpon>edicion.vb</DependentUpon>
     </Compile>
@@ -149,10 +155,19 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="promocion.Designer.vb">
+      <DependentUpon>promocion.vb</DependentUpon>
+    </Compile>
+    <Compile Include="promocion.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="autor.resx">
       <DependentUpon>autor.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="bibliografia.resx">
+      <DependentUpon>bibliografia.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="edicion.resx">
       <DependentUpon>edicion.vb</DependentUpon>
@@ -177,6 +192,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="promocion.resx">
+      <DependentUpon>promocion.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
